<resources>
    <string name="app_name">Pet Em Foco Fornecedor</string>
    <string name="salvar">Salvar</string>

    <!--Strings relacionadas a cadastro-->
    <string name="digite_seu_nome">Digite seu nome</string>
    <string name="digite_sua_senha">Digite sua senha (min. 6 caracteres)</string>
    <string name="repita_sua_senha">Repita sua senha</string>
    <string name="nome">Nome</string>
    <string name="confirmar_sua_senha">Confirme sua senha</string>
    <string name="sucesso_cadastro_proxima_etapa_Toast">SucessoSucesso! Pronto para a próxima etapa</string>
    <string name="sucesso_cadastro">Cadastro Efetuado com Sucesso!</string>
    <string name="erro_ao_cadastrar">Erro ao cadastrar</string>
    <string name="erro_ao_remover">Erro ao cadastrar</string>
    <string name="erro_ao_atualizar">Erro ao atualizar</string>
    <string name="sucesso_remocao">Remoção Efetuada com Sucesso!</string>
    <string name="sucesso_atualizacao">Atualização Efetuada com Sucesso!</string>
    <string name="falha_cadastro">Cadastro Falhou!</string>
    <string name="falha_remocao">Remoção Falhou!</string>
    <string name="falha_atualizacao">Atualização Falhou!</string>
    <string name="pergunta_do_sistema">Pergunta do Sistema</string>
    <string name="atencao">Atenção!</string>
    <string name="pergunta_confirma_dados_serao_perdidos">Os dados não salvos serão perdidos. Confirma?</string>

    <!--Strings relacionadas a cadastro de fornecedor-->
    <string name="tb_cadastro_fornecedor">Cadastro de Fornecedor</string>
    <string name="tb_editar_fornecedor">Edição de Fornecedor</string>
    <string name="botao_cadastrar_fornecedor">Cadastrar Fornecedor</string>
    <string name="sucesso_cadastro_Fornecedor">Sucesso ao cadastrar fornecedor</string>
    <string name="digite_seu_telefone">Digite seu telefone</string>
    <string name="digite_seu_cpj_cnpj">Digite seu CPF/CNPJ</string>
    <string name="prompt_telefone">Telefone</string>
    <string name="prompt_cpf_cnpj">CPF/CNPJ</string>
    <string name="prompt_horario">Horário de Funcionamento</string>
    <string name="prompt_action_editar">Editar Perfil</string>
    <string name="prompt_action_eliminar">Eliminar Perfil</string>
    <string name="erro_cadastro_fornecedor_email_invalido_Toast">Erro ao cadastrar fornecedor: Email indicado não é válido.</string>
    <string name="erro_cadastro_fornecedor_senha_invalida_Toast">Erro ao cadastrar fornecedor: Escolha uma senha que contenha pelo menos 6 caracteres.</string>
    <string name="erro_cadastro_fornecedor_email_usado_Toast">Erro ao cadastrar fornecedor: Já existe uma conta com esse e-mail.</string>
    <string name="erro_cadastro_fornecedor_campos_obrigatorios_Toast">Erro ao cadastrar fornecedor: Preencha todos os campos</string>
    <string name="erro_cadastro_fornecedor_senhas_diferentes_Toast">Erro ao cadastrar fornecedor: Os campos de senha devem ser iguais.</string>
    <string name="erro_cadastro_fornecedor_sem_conexao">Erro ao cadastrar fornecedor: Verifique a sua conexão</string>
    <string name="erro_cadastro_fornecedor_nome_fornecedor_Toast">Erro ao cadastrar fornecedor: O nome de fornecedor inválido.</string>
    <string name="tb_geolocalizacao_titulo">Localização</string>
    <string name="google_maps_key">AIzaSyA5ajs6LhgYb3YfbuQ-hyDrUq4GYMjMkT0</string>
    <string name="pergunta_cadastro_endereco">Deseja cadastrar seu endereço agora?</string>

    <!--Strings relacionadas a editar fornecedor-->
    <string name="erro_editar_fornecedor_campos_obrigatorios_Toast">Erro ao editar fornecedor: Preencha todos os campos</string>

    <!--Strings relacionadas a tela de busca-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Strings relacionadas a login-->
    <string name="prompt_email">Email</string>
    <string name="prompt_senha">Senha</string>
    <string name="digite_seu_email">Digite seu e-mail</string>
    <string name="digite_sua_senha_login">Digite sua senha</string>
    <string name="entrar">Entrar</string>
    <string name="sair">Sair</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="sucesso_login_Toast">Sucesso ao fazer login!</string>
    <string name="erro_login_invalido_Toast">Erro ao fazer login!</string>
    <string name="botao_login_google">Login com o Google</string>

    <!--Strings relacionadas a endereço-->
    <string name="cadastrar_endereco">Continuar o Cadastro</string>
    <string name="tb_cadastro_endereco">Cadastro de Endereço</string>
    <string name="digite_seu_logradouro">Digite seu logradouro</string>
    <string name="endereco_numero">Número</string>
    <string name="digite_seu_numero">Digite seu número</string>
    <string name="endereco_complemento">Complemento</string>
    <string name="endereco_logradouro">Logradouro</string>
    <string name="digite_seu_complemento">Digite o complemento</string>
    <string name="endereco_bairro">Bairro</string>
    <string name="digite_seu_bairro">Digite seu bairro</string>
    <string name="endereco_localidade">Cidade</string>
    <string name="digite_sua_cidade">Digite sua cidade</string>
    <string name="endereco_cep">CEP</string>
    <string name="digite_seu_cep">Digite seu CEP</string>
    <string name="endereco_uf">Estado</string>
    <string name="escolha_sua_uf">Escolha seu estado</string>
    <string name="finalizar_cadastro">Finalizar Cadastro</string>
    <string name="erro_cadastro_endereco_campos_obrigatorios_Toast">Erro ao cadastrar endereço: Preencha pelo menos o logradouro, bairro e cidade</string>
    <string name="erro_coordenadas_geograficas_campos_obrigatorios_Toast">Erro ao informar uma Coordenada Geografica</string>

    <!--Strings relacionadas a serviço-->
    <string name="tb_cadastro_serviço">Cadastro de Serviço</string>
    <string name="botao_meus_servicos">Meus Serviços</string>
    <string name="botao_minhas_promocoes">Minhas Promoções</string>
    <string name="botao_cadastrar_serviço">Cadastrar Serviço</string>
    <string name="editar_servico">Editar Serviço</string>
    <string name="prompt_nome">Nome do Serviço</string>
    <string name="prompt_valor">Valor</string>
    <string name="prompt_descricao">Descrição</string>
    <string name="digite_nome_servico">Digite o nome do serviço</string>
    <string name="digite_valor_servico">R$0,00</string>
    <string name="digite_descricao_servico">Digite a descrição do serviço</string>
    <string name="servico">Serviço</string>
    <string name="preencha_campo_nome">Preencha o campo nome</string>
    <string name="preencha_campo_descricao">Preencha o campo descrição</string>
    <string name="preencha_campo_valor">Preencha o campo valor</string>
    <string name="preencha_campo_tipoAnimal">Informe um tipo de animal válido</string>
    <string name="sucesso_cadastro_servico">Serviço cadastrado com sucesso!</string>
    <string name="erro_cadastro_servico">Erro ao cadastrar serviço!</string>
    <string name="servico_existente">Esse serviço já foi criado!</string>
    <string name="sucesso_atualizar_servico">Sucesso ao atualizar serviço!</string>


    <!--Mensagens de informação ao usuário-->
    <string name="info_confirmar_remocao_servico">Deseja remover o serviço selecionado?</string>
    <string name="info_confirmar_remocao_promocao">Deseja remover a promoção selecionado?</string>

    <!--Strings de ações-->
    <string name="action_salvar">Salvar</string>
    <string name="action_editar">Editar</string>

    <!--Strings de cupom-->
    <string name="digite_nome_cupom">Digite o nome do código de desconto</string>
    <string name="digite_valor_cupom">R$0,00</string>
    <string name="cupom_criado">Código de desconto criado!</string>
    <string name="cupom_removido">Código de desconto removido!</string>
    <string name="pergunta_confirma_remocao_cupom">O código de desconto será removido. Confirma?</string>
    <string name="sucesso_atualizar_cupom">Sucesso ao atualizar cupom!</string>
    <string name="contem_espaco">Digite um nome sem conter espaço!</string>
    <string name="contem_quebra_de_linha">Digite um nome sem quebra de linha!</string>
    <string name="quinze_caracteres">Digite um nome com no máximo 15 caracteres!</string>
    <string name="seis_caracteres">Digite um nome com no mínimo 6 caracteres!</string>
    <string name="pergunta_confirma_criar_serviço">Você precisa criar um serviço. Confirma?</string>
    <string name="pergunta_confirma_editar_cupom">Você precisa editar o cupom. Confirma?</string>
    <string name="cupom_nome_existente">Esse cupom já existe!</string>
    <string name="data_inicio_antes">A data de início não pode ser antes da data atual!</string>
    <string name="data_vencimento_antes">A data de vencimento não pode ser antes da data atual!</string>
    <string name="data_inicio_depois">A data do início não pode ser após a data de vencimento!</string>


    <!--String de erros-->
    <string name="error_selecione_um_servico">Selecione um serviço!</string>
    <string name="title_activity_editar_servico">Edição de Servico</string>
    <string name="confirmar_edicao_geolocalizacao">CONFIRMAR</string>
    <string name="title_activity_cadastro_fornecedor_tipo">CadastroFornecedorTipoActivity</string>

    <!--Strings do calendario-->
    <string name="material_calendar_monday">S</string>
    <string name="material_calendar_tuesday">T</string>
    <string name="material_calendar_wednesday">Q</string>
    <string name="material_calendar_thursday">Q</string>
    <string name="material_calendar_friday">S</string>
    <string name="material_calendar_saturday">S</string>
    <string name="material_calendar_sunday">D</string>

    <array name="material_calendar_months_array">
        <item>janeiro</item>
        <item>fevereiro</item>
        <item>março</item>
        <item>abril</item>
        <item>maio</item>
        <item>junho</item>
        <item>julho</item>
        <item>agosto</item>
        <item>setembro</item>
        <item>outubro</item>
        <item>novembro</item>
        <item>dezembro</item>
    </array>

    <string name="material_calendar_today_button">Hoje</string>
    <string name="material_calendar_positive_button">Confirmar</string>
    <string name="material_calendar_negative_button">Cancelar</string>
    <string name="editar">EDITAR</string>

    <string name="erro_timeout_msg">Operação demorou demais.Verfique sua conexão com a internet</string>
    <string name="url_matrix_distance">https://maps.googleapis.com/maps/api/distancematrix/json?units=metric</string>
    <string name="api_key_google_matrix">AIzaSyBrKPS2exi5vhLYY1H1islk4UUlRb4Z9Rk</string>
    <string name="cep">CEP</string>
    <string name="erro_informar_coordenadas_geograficas">Informe as coordenadas Geográficas</string>

</resources>
