<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/fundo_degrade"
    tools:context="projetaobcc20172.com.projetopetemfocofornecedor.activity.CadastroFornecedorActivity">

    <include
        android:id="@+id/tb_cadastro_fornecedor"
        layout="@layout/toolbar">
    </include>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tb_cadastro_fornecedor"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp" />

                <TextView
                    android:id="@+id/tvCadastroNomeFornecedor"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:text="@string/nome"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etCadastroNomeFornecedor"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_marginTop="31dp"
                    android:ems="10"
                    android:hint="@string/digite_seu_nome"
                    android:inputType="text" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp" />

                <TextView
                    android:id="@+id/tvCadastroEmailFornecedor"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:text="@string/prompt_email"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etCadastroEmailFornecedor"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:ems="10"
                    android:hint="@string/digite_seu_email"
                    android:inputType="textEmailAddress" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp" />


                <TextView
                    android:id="@+id/tvCadastroTelefoneFornecedor"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:text="@string/prompt_telefone"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etCadastroTelefoneFornecedor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:ems="10"
                    android:hint="@string/digite_seu_telefone"
                    android:inputType="phone" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp" />

                <TextView
                    android:id="@+id/tvCadastroCpfCnpjFornecedor"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:text="@string/prompt_cpf_cnpj"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etCadastroCpfCnpjFornecedor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/digite_seu_cpj_cnpj"
                    android:inputType="phone" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp" />

                <TextView
                    android:id="@+id/tvCadastroHorarioFornecedor"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:text="@string/prompt_horario"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:background="@drawable/gradiente_spinner"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">

                    <Spinner
                        android:id="@+id/servicoSpinner"
                        android:layout_margin="4dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.AppCompat.DropDownItem.Spinner"/>

                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="4dp" />


                <TextView
                    android:id="@+id/tvCadastroSenhaFornecedor"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:text="@string/prompt_senha"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etCadastroSenhaFornecedor"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:ems="10"
                    android:hint="@string/digite_sua_senha"
                    android:inputType="textPassword" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp" />

                <TextView
                    android:id="@+id/tvCadastroSenha2Fornecedor"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:text="@string/confirmar_sua_senha"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etCadastroSenha2Fornecedor"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:ems="10"
                    android:hint="@string/repita_sua_senha"
                    android:inputType="textPassword" />

                <Button
                    android:id="@+id/btnCadastrarFornecedor"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/shapebutton"
                    android:text="@string/cadastrar_endereco" />


            </LinearLayout>

        </ScrollView>

    </LinearLayout>


</RelativeLayout>