<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo_degrade"
    android:padding="0dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="projetaobcc20172.com.projetopetemfocofornecedor.activity.CadastroEnderecoActivity">

    <include
        android:id="@+id/tb_endereco"
        layout="@layout/toolbar"></include>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tb_endereco"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp" />

                <TextView
                    android:id="@+id/tvCadastroCepEndereco"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:text="@string/endereco_cep"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etCadastroCepEndereco"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/digite_seu_cep"
                    android:inputType="numberSigned"
                    android:maxLength="9" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvCadastroLogradouroEndereco"
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:layout_margin="6dp"
                        android:gravity="bottom"
                        android:text="@string/endereco_logradouro"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="bold" />
                    <View
                        android:layout_width="20dp"
                        android:layout_height="1dp"/>

                    <ImageButton
                        android:id="@+id/ib_editar_localizacao_geografica"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/ic_action_mapa"
                        android:foregroundTintMode="src_over" />

                </LinearLayout>

                <EditText
                    android:id="@+id/etCadastroLogradouroEndereco"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_marginTop="31dp"
                    android:ems="10"
                    android:hint="@string/digite_seu_logradouro"
                    android:inputType="text" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp" />

                <TextView
                    android:id="@+id/tvCadastroNumeroEndereco"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:text="@string/endereco_numero"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etCadastroNumeroEndereco"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_marginTop="31dp"
                    android:ems="10"
                    android:hint="@string/digite_seu_numero"
                    android:inputType="numberSigned"
                    android:maxLength="5" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp" />

                <TextView
                    android:id="@+id/tvCadastroComplementoEndereco"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:text="@string/endereco_complemento"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etCadastroComplementoEndereco"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_marginTop="31dp"
                    android:ems="10"
                    android:hint="@string/digite_seu_complemento"
                    android:inputType="text" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp" />

                <TextView
                    android:id="@+id/tvCadastroBairroEndereco"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:text="@string/endereco_bairro"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etCadastroBairroEndereco"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_marginTop="31dp"
                    android:ems="10"
                    android:hint="@string/digite_seu_bairro"
                    android:inputType="text" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvCadastroLocalidadeEndereco"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:text="@string/endereco_localidade"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvCadastroUfEndereco"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:text="@string/endereco_uf"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="180dp"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/etCadastroLocalidadeEndereco"
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:layout_marginTop="31dp"
                            android:ems="10"
                            android:hint="@string/digite_sua_cidade"
                            android:inputType="text" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/gradiente_spinner"
                        android:orientation="horizontal">

                        <Spinner
                            android:id="@+id/ufSpinner"
                            style="@style/Widget.AppCompat.DropDownItem.Spinner"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />

                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/btnCadastrarEndereco"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/shapebutton"
                    android:text="@string/finalizar_cadastro"
                    android:visibility="visible" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</RelativeLayout>